[gd_scene load_steps=7 format=3 uid="uid://bwc4kvv0b88pq"]

[ext_resource type="Script" path="res://levels/menu_screen.gd" id="1_7vjwl"]
[ext_resource type="Texture2D" uid="uid://cf2ioyo44habm" path="res://assets/c6ae466d151ee661.png" id="1_diqkx"]
[ext_resource type="FontFile" uid="uid://c8q11tmjngyjt" path="res://assets/Crang.ttf" id="1_l5452"]
[ext_resource type="Theme" uid="uid://bvvho6mnw7g2r" path="res://resources/theme.tres" id="3_qnf3s"]
[ext_resource type="FontFile" uid="uid://bfl3qfjo8qnge" path="res://assets/PressStart2P-Regular.ttf" id="4_2x3x6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bysi4"]
bg_color = Color(0.486275, 0.341176, 0.360784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vjwl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_right = 129.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_diqkx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Logo" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Steering" type="Label" parent="CenterContainer/VBoxContainer/Logo"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_l5452")
theme_override_font_sizes/font_size = 64
text = "STEERING"
horizontal_alignment = 1

[node name="Behaviors" type="Label" parent="CenterContainer/VBoxContainer/Logo"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_l5452")
theme_override_font_sizes/font_size = 64
text = "BEHAVIORS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_qnf3s")
theme_override_fonts/font = ExtResource("4_2x3x6")
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Left" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_qnf3s")
text = "<"

[node name="SceneLabel" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_qnf3s")
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_bysi4")
text = "Seek"
horizontal_alignment = 1

[node name="Right" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_qnf3s")
text = ">"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
